<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="E_ValvePositionState" Id="{ee9a7a6c-9059-4c91-b3c1-682d95993122}">
    <Declaration><![CDATA[TYPE E_ValvePositionState :
    (
OPEN	:= 0,
CLOSED	:= 1,
MOVING	:= 2,
INVALID :=3,
OPEN_F :=4
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>